hotfix: returning to Java 17 and older Lucene version
Looks like upgrading Lucene & Java to 21 will take a lot more effort.